--- a/NodeJSES6/views/pages/profile_fca.ejs
+++ b/NodeJSES6/views/pages/profile_fca.ejs
@@ -3,9 +3,8 @@
 <% include ../includes/head.ejs %>
 <body>
 <% include ../includes/header.ejs %>
-<section class="container custom-content">
     <section class="section is-medium">
-        <div class="column">
+        <div class="container has-text-centered">
             <% if (locals.user) { %>
                 <table class="table">
                     <thead>
@@ -31,7 +30,6 @@
                 </table>
             <% } %>
     </section>
-</section>
 <% include ../includes/footer.ejs %>
 </body>
 </html>
