Modify profile page to be used with fca

--- a/NodeJSES6/views/pages/profile_fca.ejs
+++ b/NodeJSES6/views/pages/profile_fca.ejs
@@ -6,7 +6,7 @@
     <section class="section is-medium">
         <div class="container has-text-centered">
             <% if (locals.user) { %>
-                <table class="table">
+                <table class="table is-fullwidth">
                     <thead>
                     <tr class="has-text-grey-dark">
                         <th>Vos Informations</th>
