Modify select size and condition on profile page

--- a/NodeJSES6/views/pages/index.ejs
+++ b/NodeJSES6/views/pages/index.ejs
@@ -12,7 +12,7 @@
             <a href="https://partenaires.franceconnect.gouv.fr/fca/fournisseur-service" title="Documentation Fournisseur de service agent">agents</a>.
         </p>
         <div class="column">
-            <div class="select is-rounded">
+            <div class="select is-medium is-rounded">
                 <form action="/" method="post" id="usageForm" name="usageForm">
                     <select name="usage">
                         <option>Choisissez un usage</option>
