--- a/NodeJSES6/views/includes/head.ejs
+++ b/NodeJSES6/views/includes/head.ejs
@@ -5,5 +5,5 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css" integrity="sha256-zIG416V1ynj3Wgju/scU80KAEWOsO5rRLfVyRDuOv7Q=" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/custom.css" />
-    <title>Démonstrateur Fournisseur de Service</title>
+    <title>Démonstrateur de Fournisseur de Service</title>
 </head>
