Add warning message on index page

--- a/serviceProviderNodeJSPassport/views/index.ejs
+++ b/serviceProviderNodeJSPassport/views/index.ejs
@@ -77,6 +77,28 @@
     </div>
     <% } %>
     <% } else { %>
+    <div class="span6">
+        <div class="alert alert-info">
+            <p><strong>Notre plateforme de test évoluera à partir du 7 juin 2019, ci-après le nouveau lien : </strong></p>
+            <p>
+                <strong>
+                    <a href="https://fsp.integ01.dev-franceconnect.fr/">
+                        https://fsp.integ01.dev-franceconnect.fr/
+                    </a>
+                </strong>
+            </p>
+            <p><strong>De même, une purge de notre base de données aura lieu à cette date. </strong></p>
+            <p><strong>Une liste publique des comptes test à utiliser à partir de cette date est disponible ici :</strong></p>
+            <p>
+                <strong>
+                    <a href="https://github.com/france-connect/identity-providers-examples/blob/master/NodeJSES6/data/database.csv.">
+                        https://github.com/france-connect/identity-providers-examples/blob/master/NodeJSES6/data/database.csv.
+                    </a>
+                </strong>
+            </p>
+            <p><strong>Si vous devez créer un compte test spécifique à votre cas d'usage, vous le pourrez en éditant directement le fichier du lien ci-dessus.</strong></p>
+        </div>
+    </div>
     <div class="span6 well">
         <h4>Avec le Guichet des Parisiens vous pouvez :</h4>
         <ul class="list-main-content">
