[FCA-115] FC/FCA replaced by AC

--- a/serviceProviderNodeJSPassport/views/index.ejs
+++ b/serviceProviderNodeJSPassport/views/index.ejs
@@ -90,7 +90,7 @@
         </div>
     </div>
     <div class="span6 well">
-        <h4>Gagnez du temps dans la réalisation de vos démarches en vous connectant par FranceConnect!</h4>
+        <h4>Gagnez du temps dans la réalisation de vos démarches en vous connectant par AgentConnect !</h4>
         <p>Connectez vous à l'administration <b>en toute sécurité</b>, <b>sans créer de nouveau compte</b>.</p>
         <div class="span12 connect">
             <a id="fc_login" rel="group" href="/login_org">
