--- a/serviceProviderNodeJSPassport/views/index.ejs
+++ b/serviceProviderNodeJSPassport/views/index.ejs
@@ -92,7 +92,7 @@
             <p>
                 <strong>
                     <a href="https://github.com/france-connect/identity-providers-examples/blob/master/NodeJSES6/data/database.csv.">
-                        https://github.com/france-connect/identity-providers-examples/blob/master/NodeJSES6/data/database.csv.
+                        Liste des comptes test.
                     </a>
                 </strong>
             </p>
